# pdf_data_generation

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/: quality_focused.yaml
docs/: SETUP_GUIDE.md
scripts/: analyze_dataset.py  batch_process_quality.py  batch_process_runpod.py  convert_format.py  generate.sh  runpod_setup.sh  setup.sh
src/vedic_astro_gen/: __init__.py  __main__.py  augmentation.py  cli.py  generator.py  knowledge_base.py  pdf_extractor.py  quality_filters.py  templates.py
tests/: __init__.py  test_pipeline.py
